2013-05-24  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/omp.xsl (report [summary]): Removed third line with filtered
	results of current page. This does not make sense here anymore because
	results are not visible on this page. Also, it is rarely used
	and finally with the new filter features it is possible to limit
	the number of results already directly via the powerfilter.
	Simplified the naming of the filtered report.

2013-05-24  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/omp.xsl (cvss-risk-factor): Apply ranges based on user
	severity settings.

2013-05-24  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/gsad.c (user_set_severity): New function.
	(exec_omp_post): Set user severity class after saving omp settings.

	* src/gsad_omp.c (save_my_settings_omp): Add severity parameter.

	* src/gsad_omp.h: Adjust header accordingly.

	* src/html/omp.xsl (severity): New template.

2013-05-24  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/gsad.c (struct user): Add severity variable.
	(user_add): Add severity class parameter. Set user severity.
	(exec_omp_post, request_handler): Ditto.

	* src/gsad_base.h (struct credentials_t): Add severity variable.

	* src/gsad_omp.c (xsl_transform_omp): Send user severity class within
	envelope.
	(authenticate_omp): Add parameter for severity class. Adjust
	omp_authenticate_info call.

	* src/gsad_omp.h: Adjust authenticate_omp prototype.

2013-05-23  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (edit_port_list): Match operation responses.
	(modify_port_list_response): New template.

	* src/html/gsad.xsl (html-gsa-logo): Apply icons for Edit Port List.

2013-05-23  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/omp.xsl (report [apps]): Add filter parameters to result
	links to ensure that detection log entries aren't hidden when
	navigating to next results page.

2013-05-23  Timo Pollmeier <timo.pollmeier@greenbone.net>
