@@ -1,3 +1,13 @@
+2013-05-27  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
+	* src/html/img/cpe, src/html/img/cpe/a:apache:http_server.png,
+	src/html/img/cpe/a:postgresql:postgresql.png,
+	src/html/img/cpe/a:openbsd:openssh.png,
+	src/html/img/cpe/a:mysql:mysql.png, src/html/img/cpe/a:php:php.png:
+	New.
+
+	* CMakeLists.txt: Install new app icons.
+
 2013-05-24  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	* src/html/omp.xsl (report [summary]): Removed third line with filtered
